<resources>
    <string name="app_name">Point of Sales</string>
    <string name="mini_pos_log_in">MINI POS LOG IN</string>
    <string name="user">user</string>
    <string name="e_g_john123">e.g: john123</string>
    <string name="user_name_hint_login_page">User Name</string>
    <string name="password_hint_login_page">Password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="user_name_or_password_is_empty">User name or password is empty</string>
    <string name="log_in_success">Log in Success!</string>
    <string name="user_name_or_password_is_wrong">User name or Password is wrong!</string>
    <string name="mini_pos_register">MINI POS Register</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="register">Register</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="add_stock">+ STOCK</string>
    <string name="new_bill">NEW BILL</string>
    <string name="stock_view">VIEW STOCK</string>
    <string name="add_product">+ PRODUCT</string>
    <string name="category">CATEGORY</string>
    <string name="reports">REPORTS</string>
    <string name="add_category">+ CATEGORY</string>
    <string name="view_category">VIEW CATEGORY</string>
    <string name="view_products">VIEW PRODUCTS</string>
    <string name="return_refund">RETURN/REFUND</string>
    <string name="view_promotion">VIEW PROMOTION</string>
    <string name="promotion">+ PROMOTION</string>
    <string name="log_out">Log Out</string>
    <string name="add_category_text">ADD CATEGORY</string>
    <string name="enter_new_category">Enter New Category</string>
    <string name="enter_category_description">Enter Category Description</string>
    <string name="add">Add</string>
    <string name="categories_in_shop">CATEGORIES IN SHOP</string>
    <string name="edit_category">Edit Category</string>
    <string name="category_id">Category ID</string>
    <string name="edit_or_delete_category">EDIT OR DELETE CATEGORY</string>
    <string name="edit_category_description">Edit Category Description</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="add_product_text">ADD PRODUCT</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="products_in_shop">PRODUCTS IN SHOP</string>
    <string name="enter_new_product">Enter New Product</string>
    <string name="product">PRODUCT</string>
    <string name="barcode">Barcode</string>
    <string name="stock_price">Enter Buying Price</string>
    <string name="buy_price">Enter Buying Price</string>
    <string name="sell_price">Enter Selling Price</string>
    <string name="add_to">Add To</string>
    <string name="finish_add">Finish Add</string>
    <string name="add_stock_h">ADD STOCK</string>
    <string name="new_item">Another</string>
    <string name="ex_date">Enter Exp Date</string>
    <string name="qty">Quantity</string>
    <string name="stock_details">STOCK DETAILS</string>
    <string name="date">Date</string>
    <string name="suplier">Supplier Name</string>
    <string name="total_value">Total Value</string>
    <string name="pay_date">Pay Date</string>
    <string name="next">Next</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="confirm_inventory">Confirm Inventory</string>
    <string name="date_vou">Bill Date YYYY/MM/DD</string>
    <string name="pay_date_f">Pay Date YYYY/DD/MM</string>
    <string name="new_stock">New Stock</string>
    <string name="your_shop_inventory">Shop Inventory</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="edit_or_delete_product">Edit or Delete Product</string>
    <string name="product_id">Product ID</string>
    <string name="edit_product">Edit Product</string>
    <string name="edit_product_des">Edit Product Description</string>
    <string name="start_a_new_bill">Start a New Bill</string>
    <string name="customer_name">Customer Name</string>
    <string name="scan">Scan</string>
    <string name="unit_price">Unit Price</string>
    <string name="total_price">Amount</string>
    <string name="billval">Total</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_bill">Checkout</string>
    <string name="total_price_a">Total Amount</string>
    <string name="confirm">Confirm</string>
    <string name="cus_phone_no">Cus. Phone No</string>
    <string name="check">Check</string>
    <string name="minipos">MINIPOS</string>
    <string name="welcome_to_minipos">Welcome To Minipos!</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="Name">Name</string>
    <string name="check_inventory">Check Stock</string>
    <string name="stock">Stock</string>
    <string name="Product">Product</string>
    <string name="Category">Category</string>
    <string name="description">Description</string>
    <string name="buying_price">Buying Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="expire_date_dd_mm_yyyy">Expire Date: DD/MM/YYYY</string>
    <string name="quantity">Quantity</string>
    <string name="BillDate">Bill Date DD/MM/YYYY</string>
    <string name="pay_date_">Pay Date DD/MM/YYYY</string>
    <string name="next_cart_value">Next Cart Value</string>
    <string name="today_sales">Today Sales</string>
    <string name="today_sales_RS">Today Sales RS :</string>
    <string name="_0000_00">0000.00</string>
    <string name="Today_Profit">Today Profit RS</string>
    <string name="all_time_summery">All Time Summery</string>
    <string name="all_sales_txt">All Sales RS:</string>
    <string name="all_profit">All Profit</string>
    <string name="Today_Payments">Today Payed RS:</string>
    <string name="PaymentsTxt">Payments RS:</string>
    <string name="Cheques">Cheques</string>
    <string name="pending_cheques">Pending Cheques</string>
    <string name="Value">Value RS:</string>
    <string name="Next_Cheque_Date">Next Cheque Date</string>
    <string name="today">Today</string>
    <string name="Your_Cart">Your Cart</string>
    <string name="total_to_pay_rs">Total to Pay Rs:</string>
    <string name="stock_sales_details"><![CDATA[Stock & Sales Details]]></string>
    <string name="stock_value">Stock Value</string>
    <string name="expiring_items">Expiring Items</string>
</resources>