<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDeleteProducts"
    android:orientation="vertical"
    android:gravity="center">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_or_delete_product"
                android:textSize="24sp"
                android:textAlignment="center">
            </TextView>


        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/proID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:autofillHints=""
            android:editable="false"
            android:ems="12"
            android:hint="@string/product_id"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/editTextHintColor"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editProd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/edit_product"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/editTextHintColor"
            android:textSize="20sp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editProDes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/edit_product_des"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            android:autofillHints="" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category"/>

            <Spinner
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:id="@+id/catSpinner2" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updateButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Update"
            android:textColor="@color/dark_aqua"
            android:shadowColor="@color/black"/>

        <Button
            android:id="@+id/deleteButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/delete"
            android:textColor="@color/dark_crimson"
            android:shadowColor="@color/black"/>

        <Button
            android:id="@+id/backButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/back"
            android:textColor="@color/normal_blue"
            android:shadowColor="@color/dark_aqua"/>

    </LinearLayout>
    </LinearLayout>


    </LinearLayout>