<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:background="@color/jade_green"
        android:elevation="10dp"
        android:layout_marginTop="0dp"
        android:id="@+id/headerbox">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product_text"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Product"
                android:id="@+id/newProduct"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:id="@+id/newProductDescription"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<!--        <EditText-->
<!--            android:id="@+id/newProduct"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:layout_weight="5"-->
<!--            android:height="48sp"-->
<!--            android:ems="12"-->
<!--            android:hint="@string/enter_new_product"-->
<!--            android:inputType="text"-->
<!--            android:textAlignment="center"-->
<!--            android:textColorHint="@color/editTextHintColor"-->
<!--            android:textSize="20sp"-->
<!--            android:autofillHints="" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<!--        <EditText-->
<!--            android:id="@+id/newProductDescription"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:layout_weight="5"-->
<!--            android:height="48sp"-->
<!--            android:ems="12"-->
<!--            android:hint="@string/enter_product_description"-->
<!--            android:inputType="text"-->
<!--            android:textAlignment="center"-->
<!--            android:textColorHint="#A1887F"-->
<!--            android:textSize="20sp"-->
<!--            android:autofillHints="" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"/>

        <Spinner
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:id="@+id/catSpinner" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/addProdDbButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/dark_aqua"
            android:shadowColor="@color/black"/>

        <Button
            android:id="@+id/cancelProdButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/cancel_button_text"
            android:textColor="@color/dark_crimson"
            android:shadowColor="@color/black"/>

    </LinearLayout>


</LinearLayout>