<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategoryactivity"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:background="@color/jade_green"
        android:elevation="10dp"
        android:layout_marginTop="0dp"
        android:id="@+id/headerbox">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category_text"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Category"
                android:id="@+id/newCategory"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:id="@+id/newCategoryDescription"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->
<!--        -->
<!--        -->

<!--        <EditText-->
<!--            android:id="@+id/newCategory"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:layout_weight="5"-->
<!--            android:height="48sp"-->
<!--            android:ems="12"-->
<!--            android:hint="@string/enter_new_category"-->
<!--            android:inputType="text"-->
<!--            android:textAlignment="center"-->
<!--            android:textColorHint="@color/editTextHintColor"-->
<!--            android:textSize="20sp"-->
<!--            android:autofillHints="" />-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->

<!--        <EditText-->
<!--            android:id="@+id/newCategoryDescription"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:layout_weight="5"-->
<!--            android:height="48sp"-->
<!--            android:ems="12"-->
<!--            android:hint="@string/enter_category_description"-->
<!--            android:inputType="text"-->
<!--            android:textAlignment="center"-->
<!--            android:textColorHint="#A1887F"-->
<!--            android:textSize="20sp"-->
<!--            android:autofillHints="" />-->
<!--    </LinearLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/addCategoryDbButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/add"
            android:textColor="@color/dark_aqua"
            android:shadowColor="@color/black"/>

        <Button
            android:id="@+id/cancelCategoryButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/cancel_button_text"
            android:textColor="@color/dark_crimson"
            android:shadowColor="@color/black"/>

    </LinearLayout>


</LinearLayout>